Added Suzanne model and implemented camera controls

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "program": "${workspaceFolder}/zig-out/bin/centralgfx",
             "args": [],
-            "cwd": "${workspaceFolder}/zig-out/bin/",
+            "cwd": "${workspaceFolder}/",
             "internalConsoleOptions": "neverOpen",
             "preLaunchTask": "build",
         }
