Add gather/masked store to the simd implementation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,9 @@
             "program": "${workspaceFolder}/zig-out/bin/centralgfx",
             "args": [],
             "cwd": "${workspaceFolder}/",
+            "sourceLanguages": [
+                "zig"
+            ],
             "internalConsoleOptions": "neverOpen",
             "preLaunchTask": "build",
         }
